Updated fetching candidate component and class

--- a/force-app/main/default/classes/CandidateAPIService.cls
+++ b/force-app/main/default/classes/CandidateAPIService.cls
@@ -1,55 +1,32 @@
 public with sharing class CandidateAPIService {
 
     public class CandidateWrapper implements Comparable {
-        public Map<String, Object> data;
+        public Candidate__c candidateRec;
         public Decimal experience;
         public Boolean locationPriority;
-        public Integer skillMatches; // number of overlapping skills
+        public Integer skillMatches;
 
-        public CandidateWrapper(Map<String, Object> data, String jobLocation, List<String> requiredSkills) {
-            this.data = data;
-
-            // Safe experience parsing
-            this.experience = 0;
-            if(data.containsKey('experienceYears') && data.get('experienceYears') != null){
-                Object expObj = data.get('experienceYears');
-                if(expObj instanceof Integer){
-                    this.experience = Decimal.valueOf((Integer)expObj);
-                } else if(expObj instanceof Double){
-                    this.experience = Decimal.valueOf((Double)expObj);
-                } else {
-                    try {
-                        this.experience = Decimal.valueOf(String.valueOf(expObj));
-                    } catch(Exception e){
-                        this.experience = 0;
-                    }
-                }
-            }
-
-            // Location priority
-            String candLocation = data.containsKey('location') && data.get('location') != null
-                ? (String)data.get('location') : '';
+        public CandidateWrapper(Candidate__c cand, String jobLocation, List<String> requiredSkills) {
+            this.candidateRec = cand;
+            this.experience = cand.Experience__c != null ? cand.Experience__c : 0;
+            String candLocation = cand.Location__c != null ? cand.Location__c : '';
             this.locationPriority = (!String.isBlank(jobLocation) && candLocation.equalsIgnoreCase(jobLocation));
-
-            // Count skill matches
             this.skillMatches = 0;
-            if(data.containsKey('skills') && data.get('skills') != null){
-                List<Object> candSkills = (List<Object>) data.get('skills');
+
+            if (cand.Skills__c != null) {
+                List<String> candSkills = cand.Skills__c.split(',');
                 Set<String> candSet = new Set<String>();
-                for(Object s : candSkills){
-                    candSet.add(s != null ? ((String)s).toLowerCase() : '');
+                for (String s : candSkills) {
+                    if (s != null) candSet.add(s.trim().toLowerCase());
                 }
-                for(String reqSkill : requiredSkills){
-                    if(candSet.contains(reqSkill.toLowerCase())){
-                        this.skillMatches++;
-                    }
+                for (String reqSkill : requiredSkills) {
+                    if (candSet.contains(reqSkill.trim().toLowerCase())) this.skillMatches++;
                 }
             }
         }
 
-        // Sort: location priority → experience desc → skillMatches desc
-        public Integer compareTo(Object compareTo) {
-            CandidateWrapper other = (CandidateWrapper) compareTo;
+        public Integer compareTo(Object otherObj) {
+            CandidateWrapper other = (CandidateWrapper) otherObj;
 
             if (this.locationPriority && !other.locationPriority) return -1;
             if (!this.locationPriority && other.locationPriority) return 1;
@@ -64,85 +41,147 @@ public with sharing class CandidateAPIService {
         }
     }
 
+    public class FetchResponse {
+        @AuraEnabled public String message { get; set; }
+        @AuraEnabled public List<Candidate__c> candidates { get; set; }
+    }
+
     @AuraEnabled(cacheable=false)
-    public static List<Candidate__c> fetchCandidates(Id jobPostId) {
+    public static FetchResponse fetchCandidates(Id jobPostId) {
+
+        // 1️⃣ Fetch Job Post
         Job_Post__c jobPost = [
-            SELECT Id, Job_Title__c, Job_Description__c, Required_Skills__c,
-                   Location__c, Experience_Required__c
+            SELECT Id, Job_Title__c, Location__c, Required_Skills__c, Experience_Required__c
             FROM Job_Post__c
             WHERE Id = :jobPostId
             LIMIT 1
         ];
+        if (jobPost == null) throw new AuraHandledException('Job Post not found');
 
-        if(jobPost == null) throw new AuraHandledException('Job Post not found');
+        List<String> requiredSkills = jobPost.Required_Skills__c != null
+            ? jobPost.Required_Skills__c.split(',')
+            : new List<String>();
 
-        Decimal expRequired = jobPost.Experience_Required__c != null ? jobPost.Experience_Required__c : 0;
-        List<String> requiredSkills = jobPost.Required_Skills__c != null ? jobPost.Required_Skills__c.split(',') : new List<String>();
+        // 2️⃣ Fetch existing top 35 candidates
+        List<Candidate__c> topExisting = [
+            SELECT Id, Candidate_Name__c, Profile_URL__c, Experience__c, Skills__c, Location__c,
+                   Rank__c, Is_Top__c
+            FROM Candidate__c
+            WHERE Job_Post__c = :jobPostId AND Is_Top__c = true
+        ];
+        Set<String> existingProfiles = new Set<String>();
+        for (Candidate__c c : topExisting) {
+            if (c.Profile_URL__c != null) existingProfiles.add(c.Profile_URL__c);
+        }
 
-        // Call mock API
+        // 3️⃣ Call API
         Http http = new Http();
         HttpRequest req = new HttpRequest();
-        req.setEndpoint('callout:LinkedInTalentAPI?jobId=' + EncodingUtil.urlEncode(jobPost.Id,'UTF-8'));
+        req.setEndpoint('callout:LinkedInTalentAPI?jobId=' + EncodingUtil.urlEncode(jobPost.Id, 'UTF-8'));
         req.setMethod('GET');
         HttpResponse res = http.send(req);
 
-        if(res.getStatusCode() != 200) throw new AuraHandledException('API Error: ' + res.getBody());
-
-        Map<String,Object> result = (Map<String,Object>) JSON.deserializeUntyped(res.getBody());
-        List<Object> rawCandidates = (List<Object>) result.get('candidates');
-        if(rawCandidates == null) rawCandidates = new List<Object>();
-
-        List<CandidateWrapper> wrapped = new List<CandidateWrapper>();
-        for(Object obj : rawCandidates){
-            Map<String,Object> cand = (Map<String,Object>) obj;
-
-            // Filter only by experience ≥ minimum
-            Decimal candExp = 0;
-            if(cand.containsKey('experienceYears') && cand.get('experienceYears') != null){
-                Object expObj = cand.get('experienceYears');
-                if(expObj instanceof Integer) candExp = Decimal.valueOf((Integer)expObj);
-                else if(expObj instanceof Double) candExp = Decimal.valueOf((Double)expObj);
-                else{
-                    try{ candExp = Decimal.valueOf(String.valueOf(expObj)); } catch(Exception e){ candExp = 0; }
-                }
-            }
-
-            if(candExp >= expRequired){
-                wrapped.add(new CandidateWrapper(cand, jobPost.Location__c, requiredSkills));
-            }
+        if (res.getStatusCode() != 200) {
+            throw new AuraHandledException('API Error: ' + res.getStatusCode());
         }
 
-        if(wrapped.isEmpty()) throw new AuraHandledException('No candidates found with sufficient experience');
+        Map<String, Object> result = (Map<String, Object>) JSON.deserializeUntyped(res.getBody());
+        List<Object> rawCandidates = (List<Object>) result.get('candidates');
+        if (rawCandidates == null) rawCandidates = new List<Object>();
 
-        wrapped.sort();
+        // 4️⃣ Wrap API candidates
+        List<Candidate__c> apiCandidates = new List<Candidate__c>();
+        for (Object obj : rawCandidates) {
+            Map<String, Object> cand = (Map<String, Object>) obj;
+            String profileUrl = (String) cand.get('profileUrl');
+            if (String.isBlank(profileUrl) || existingProfiles.contains(profileUrl)) continue;
 
-        List<CandidateWrapper> topList = new List<CandidateWrapper>();
-        for(Integer i=0;i<wrapped.size() && i<35;i++) topList.add(wrapped[i]);
-
-        List<Candidate__c> toInsert = new List<Candidate__c>();
-        for(CandidateWrapper cw : topList){
-            Map<String,Object> cand = cw.data;
+            Decimal exp = 0;
+            if (cand.containsKey('experienceYears') && cand.get('experienceYears') != null) {
+                try { exp = Decimal.valueOf(String.valueOf(cand.get('experienceYears'))); } catch (Exception e) {}
+            }
 
             String skillsStr = '';
-            if(cand.containsKey('skills') && cand.get('skills') != null){
+            if (cand.containsKey('skills') && cand.get('skills') != null) {
                 List<Object> sList = (List<Object>) cand.get('skills');
                 List<String> temp = new List<String>();
-                for(Object s : sList) temp.add((String)s);
+                for (Object s : sList) temp.add((String) s);
                 skillsStr = String.join(temp, ', ');
             }
 
-            toInsert.add(new Candidate__c(
-                Candidate_Name__c = cand.containsKey('candidateName') ? (String)cand.get('candidateName') : null,
-                Profile_URL__c    = cand.containsKey('profileUrl') ? (String)cand.get('profileUrl') : null,
-                Email__c          = cand.containsKey('email') ? (String)cand.get('email') : null,
-                Phone_Number__c   = cand.containsKey('phone') ? (String)cand.get('phone') : null,
+            apiCandidates.add(new Candidate__c(
+                Candidate_Name__c = (String) cand.get('candidateName'),
+                Profile_URL__c    = profileUrl,
+                Email__c          = (String) cand.get('email'),
+                Phone_Number__c   = (String) cand.get('phone'),
                 Skills__c         = skillsStr,
-                Experience__c     = cw.experience,
-                Location__c       = cand.containsKey('location') ? (String)cand.get('location') : null
+                Experience__c     = exp,
+                Location__c       = (String) cand.get('location'),
+                Job_Post__c       = jobPost.Id
             ));
         }
 
-        insert toInsert;
-        return toInsert;
+        // 5️⃣ Combine topExisting + API candidates
+        List<CandidateWrapper> combined = new List<CandidateWrapper>();
+        for (Candidate__c c : topExisting) combined.add(new CandidateWrapper(c, jobPost.Location__c, requiredSkills));
+        for (Candidate__c c : apiCandidates) combined.add(new CandidateWrapper(c, jobPost.Location__c, requiredSkills));
+
+        combined.sort();
+
+        // 6️⃣ Determine new top 35
+        List<Candidate__c> newTop35 = new List<Candidate__c>();
+        Set<String> topProfiles = new Set<String>();
+        Integer rank = 1;
+
+        for (CandidateWrapper cw : combined) {
+            Candidate__c cand = cw.candidateRec;
+            cand.Rank__c = rank;
+            cand.Is_Top__c = (rank <= 35);
+            if (rank <= 35) newTop35.add(cand);
+            if (cand.Profile_URL__c != null && rank <= 35) topProfiles.add(cand.Profile_URL__c);
+            rank++;
+        }
+
+        // 7️⃣ Insert only API candidates that entered top 35
+        List<Candidate__c> toInsert = new List<Candidate__c>();
+        for (Candidate__c c : apiCandidates) {
+            if (c.Profile_URL__c != null && topProfiles.contains(c.Profile_URL__c)) toInsert.add(c);
+        }
+        if (!toInsert.isEmpty()) insert toInsert;
+
+        // 8️⃣ Update Rank & Is_Top only for top 35
+        Map<Id, Candidate__c> topMap = new Map<Id, Candidate__c>();
+        for (Candidate__c c : newTop35) topMap.put(c.Id, c);
+
+        List<Candidate__c> updateList = [
+            SELECT Id, Rank__c, Is_Top__c
+            FROM Candidate__c
+            WHERE Id IN :topMap.keySet()
+        ];
+        for (Candidate__c c : updateList) {
+            Candidate__c updated = topMap.get(c.Id);
+            c.Rank__c = updated.Rank__c;
+            c.Is_Top__c = updated.Is_Top__c;
+        }
+        if (!updateList.isEmpty()) update updateList;
+
+        // 9️⃣ Prepare response
+        List<Candidate__c> topList = [
+            SELECT Id, Candidate_Name__c, Profile_URL__c, Experience__c,
+                   Skills__c, Location__c, Rank__c, Is_Top__c
+            FROM Candidate__c
+            WHERE Job_Post__c = :jobPostId AND Is_Top__c = true
+            ORDER BY Rank__c ASC
+        ];
+
+        String message;
+        if (topExisting.isEmpty() && !toInsert.isEmpty()) message = 'Best 35 candidates fetched.';
+        else if (!toInsert.isEmpty()) message = toInsert.size() + ' new candidates found. Top 35 updated.';
+        else message = 'No new candidates found. Top 35 unchanged.';
+
+        FetchResponse resp = new FetchResponse();
+        resp.message = message;
+        resp.candidates = topList;
+        return resp;
     }
 }
