updated the logic to fetch candidate

--- a/mdapi_output/classes/CandidateAPIService.cls
+++ b/mdapi_output/classes/CandidateAPIService.cls
@@ -52,7 +52,7 @@ public with sharing class CandidateAPIService {
         // 1️⃣ Fetch Job Post
         Job_Post__c jobPost = [
             SELECT Id, Job_Title__c, Location__c, Required_Skills__c, Experience_Required__c, 
-                   First_Fetch_Date__c, Last_Fetch_Time__c
+                   First_Fetch_Date__c, Last_Fetch_Date__c
             FROM Job_Post__c
             WHERE Id = :jobPostId
             LIMIT 1
@@ -72,32 +72,30 @@ public with sharing class CandidateAPIService {
             // First fetch - 20 candidates
             fetchLimit = 20;
             jobPost.First_Fetch_Date__c = now;
-            jobPost.Last_Fetch_Time__c = now;
-        } else if (jobPost.Last_Fetch_Time__c != null) {
-            Long minutesDiff = (now.getTime() - jobPost.Last_Fetch_Time__c.getTime()) / (1000 * 60);
-            Long hoursDiff = (now.getTime() - jobPost.Last_Fetch_Time__c.getTime()) / (1000 * 60 * 60);
+            jobPost.Last_Fetch_Date__c = now;
+        } else if (jobPost.Last_Fetch_Date__c != null) {
+            Long hoursDiff = (now.getTime() - jobPost.Last_Fetch_Date__c.getTime()) / (1000 * 60 * 60);
             Long daysDiff = (now.getTime() - jobPost.First_Fetch_Date__c.getTime()) / (1000 * 60 * 60 * 24);
             
-            if (minutesDiff < 5) {
-                message = 'No new candidates found.';
-                fetchLimit = 0;
-            } else if (hoursDiff < 12) {
+            if (hoursDiff < 12) {
                 message = 'Please wait at least 12 hours before fetching new candidates.';
                 fetchLimit = 0;
             } else if (daysDiff < 1 && hoursDiff >= 12) {
                 // 12-24 hours after first fetch - 10 candidates
                 fetchLimit = 10;
-                jobPost.Last_Fetch_Time__c = now;
+                jobPost.Last_Fetch_Date__c = now;
             } else if (daysDiff >= 1 && daysDiff < 2) {
                 // Next day - 5 candidates
                 fetchLimit = 5;
-                jobPost.Last_Fetch_Time__c = now;
+                jobPost.Last_Fetch_Date__c = now;
             } else {
                 // After 2+ days - no more fetching
                 message = 'You already have the best candidates for this role.';
                 fetchLimit = 0;
             }
         }
+        
+        update jobPost;
         
         if (fetchLimit == 0) {
             FetchResponse resp = new FetchResponse();
@@ -196,8 +194,7 @@ public with sharing class CandidateAPIService {
             rank++;
         }
 
-        // 8️⃣ Update Job Post and Insert new candidates
-        update jobPost;
+        // 8️⃣ Insert new candidates
         if (!limitedApiCandidates.isEmpty()) insert limitedApiCandidates;
 
         // 9️⃣ Update existing candidates
