--- a/mdapi_output/classes/CandidateAPIService.cls
+++ b/mdapi_output/classes/CandidateAPIService.cls
@@ -31,11 +31,11 @@ public with sharing class CandidateAPIService {
             if (this.locationPriority && !other.locationPriority) return -1;
             if (!this.locationPriority && other.locationPriority) return 1;
 
-            if (this.experience > other.experience) return -1;
-            if (this.experience < other.experience) return 1;
-
             if (this.skillMatches > other.skillMatches) return -1;
             if (this.skillMatches < other.skillMatches) return 1;
+
+            if (this.experience > other.experience) return -1;
+            if (this.experience < other.experience) return 1;
 
             return 0;
         }
@@ -52,7 +52,7 @@ public with sharing class CandidateAPIService {
         // 1️⃣ Fetch Job Post
         Job_Post__c jobPost = [
             SELECT Id, Job_Title__c, Location__c, Required_Skills__c, Experience_Required__c, 
-                   First_Fetch_Date__c, Last_Fetch_Date__c
+                   First_Fetch_Date__c, Last_Fetch_Time__c
             FROM Job_Post__c
             WHERE Id = :jobPostId
             LIMIT 1
@@ -69,53 +69,54 @@ public with sharing class CandidateAPIService {
         String message = '';
         
         if (jobPost.First_Fetch_Date__c == null) {
-            // First fetch - 20 candidates
-            fetchLimit = 20;
+            // First fetch - 30 candidates
+            fetchLimit = 30;
             jobPost.First_Fetch_Date__c = now;
-            jobPost.Last_Fetch_Date__c = now;
-        } else if (jobPost.Last_Fetch_Date__c != null) {
-            Long hoursDiff = (now.getTime() - jobPost.Last_Fetch_Date__c.getTime()) / (1000 * 60 * 60);
-            Long daysDiff = (now.getTime() - jobPost.First_Fetch_Date__c.getTime()) / (1000 * 60 * 60 * 24);
+            jobPost.Last_Fetch_Time__c = now;
+        } else if (jobPost.Last_Fetch_Time__c != null) {
+            Long minutesDiff = (now.getTime() - jobPost.Last_Fetch_Time__c.getTime()) / (1000 * 60);
+            Long hoursDiff = (now.getTime() - jobPost.Last_Fetch_Time__c.getTime()) / (1000 * 60 * 60);
+            Long totalHours = (now.getTime() - jobPost.First_Fetch_Date__c.getTime()) / (1000 * 60 * 60);
             
-            if (hoursDiff < 12) {
+            if (minutesDiff < 5) {
+                message = 'No new candidates found.';
+                fetchLimit = 0;
+            } else if (hoursDiff < 12) {
                 message = 'Please wait at least 12 hours before fetching new candidates.';
                 fetchLimit = 0;
-            } else if (daysDiff < 1 && hoursDiff >= 12) {
+            } else if (totalHours >= 12 && totalHours < 24) {
                 // 12-24 hours after first fetch - 10 candidates
                 fetchLimit = 10;
-                jobPost.Last_Fetch_Date__c = now;
-            } else if (daysDiff >= 1 && daysDiff < 2) {
-                // Next day - 5 candidates
-                fetchLimit = 5;
-                jobPost.Last_Fetch_Date__c = now;
+                jobPost.Last_Fetch_Time__c = now;
+            } else if (totalHours >= 24 && totalHours < 36) {
+                // 24+ hours after first fetch - 10 candidates
+                fetchLimit = 10;
+                jobPost.Last_Fetch_Time__c = now;
             } else {
-                // After 2+ days - no more fetching
-                message = 'You already have the best candidates for this role.';
+                // After 36+ hours - no more fetching
+                message = 'No new candidates found.';
                 fetchLimit = 0;
             }
         }
-        
-        update jobPost;
         
         if (fetchLimit == 0) {
             FetchResponse resp = new FetchResponse();
             resp.message = message;
             resp.candidates = [
                 SELECT Id, Candidate_Name__c, Profile_URL__c, Experience__c,
-                       Skills__c, Location__c, Rank__c, Is_Top__c
+                       Skills__c, Location__c
                 FROM Candidate__c
-                WHERE Job_Post__c = :jobPostId AND Is_Top__c = true
-                ORDER BY Rank__c ASC
+                WHERE Job_Post__c = :jobPostId
+                ORDER BY CreatedDate DESC
             ];
             return resp;
         }
 
         // 3️⃣ Fetch existing candidates
         List<Candidate__c> topExisting = [
-            SELECT Id, Candidate_Name__c, Profile_URL__c, Experience__c, Skills__c, Location__c,
-                   Rank__c, Is_Top__c
+            SELECT Id, Candidate_Name__c, Profile_URL__c, Experience__c, Skills__c, Location__c
             FROM Candidate__c
-            WHERE Job_Post__c = :jobPostId AND Is_Top__c = true
+            WHERE Job_Post__c = :jobPostId
         ];
         Set<String> existingProfiles = new Set<String>();
         for (Candidate__c c : topExisting) {
@@ -137,7 +138,7 @@ public with sharing class CandidateAPIService {
         List<Object> rawCandidates = (List<Object>) result.get('candidates');
         if (rawCandidates == null) rawCandidates = new List<Object>();
 
-        // 5️⃣ Wrap and sort ALL API candidates first
+        // 5️⃣ Wrap and sort API candidates with experience filter
         List<CandidateWrapper> allApiCandidates = new List<CandidateWrapper>();
         for (Object obj : rawCandidates) {
             Map<String, Object> cand = (Map<String, Object>) obj;
@@ -147,6 +148,11 @@ public with sharing class CandidateAPIService {
             Decimal exp = 0;
             if (cand.containsKey('experienceYears') && cand.get('experienceYears') != null) {
                 try { exp = Decimal.valueOf(String.valueOf(cand.get('experienceYears'))); } catch (Exception e) {}
+            }
+            
+            // Filter by minimum experience if specified
+            if (jobPost.Experience_Required__c != null && exp < jobPost.Experience_Required__c) {
+                continue;
             }
 
             String skillsStr = '';
@@ -170,57 +176,73 @@ public with sharing class CandidateAPIService {
             allApiCandidates.add(new CandidateWrapper(newCand, jobPost.Location__c, requiredSkills));
         }
         
-        // Sort API candidates and take only the limit
-        allApiCandidates.sort();
+        // Create mixed experience distribution
         List<Candidate__c> limitedApiCandidates = new List<Candidate__c>();
-        for (Integer i = 0; i < Math.min(fetchLimit, allApiCandidates.size()); i++) {
-            limitedApiCandidates.add(allApiCandidates[i].candidateRec);
-        }
-
-        // 6️⃣ Combine existing + limited new candidates
-        List<CandidateWrapper> combined = new List<CandidateWrapper>();
-        for (Candidate__c c : topExisting) combined.add(new CandidateWrapper(c, jobPost.Location__c, requiredSkills));
-        for (Candidate__c c : limitedApiCandidates) combined.add(new CandidateWrapper(c, jobPost.Location__c, requiredSkills));
-
-        combined.sort();
-
-        // 7️⃣ Determine new rankings
-        List<Candidate__c> newTopCandidates = new List<Candidate__c>();
-        Integer rank = 1;
-        for (CandidateWrapper cw : combined) {
-            cw.candidateRec.Rank__c = rank;
-            cw.candidateRec.Is_Top__c = true;
-            newTopCandidates.add(cw.candidateRec);
-            rank++;
-        }
-
-        // 8️⃣ Insert new candidates
-        if (!limitedApiCandidates.isEmpty()) insert limitedApiCandidates;
-
-        // 9️⃣ Update existing candidates
-        List<Candidate__c> toUpdate = new List<Candidate__c>();
-        for (Candidate__c c : topExisting) {
-            for (Candidate__c updated : newTopCandidates) {
-                if (c.Id == updated.Id) {
-                    c.Rank__c = updated.Rank__c;
-                    toUpdate.add(c);
-                    break;
+        if (!allApiCandidates.isEmpty()) {
+            // Group by location priority first
+            List<CandidateWrapper> locationMatch = new List<CandidateWrapper>();
+            List<CandidateWrapper> locationOther = new List<CandidateWrapper>();
+            
+            for (CandidateWrapper cw : allApiCandidates) {
+                if (cw.locationPriority) {
+                    locationMatch.add(cw);
+                } else {
+                    locationOther.add(cw);
+                }
+            }
+            
+            // Sort each group by skills, then experience
+            locationMatch.sort();
+            locationOther.sort();
+            
+            // Take mixed experience from location matches first
+            Integer taken = 0;
+            Integer maxPerGroup = Math.max(1, fetchLimit / 4); // Take varied candidates
+            
+            // Take from location matches with experience variety
+            for (Integer i = 0; i < locationMatch.size() && taken < fetchLimit; i += Math.max(1, locationMatch.size() / maxPerGroup)) {
+                limitedApiCandidates.add(locationMatch[i].candidateRec);
+                taken++;
+            }
+            
+            // Fill remaining with other locations
+            for (Integer i = 0; i < locationOther.size() && taken < fetchLimit; i += Math.max(1, locationOther.size() / maxPerGroup)) {
+                limitedApiCandidates.add(locationOther[i].candidateRec);
+                taken++;
+            }
+            
+            // If still need more, take sequentially
+            for (CandidateWrapper cw : allApiCandidates) {
+                if (taken >= fetchLimit) break;
+                Boolean alreadyAdded = false;
+                for (Candidate__c added : limitedApiCandidates) {
+                    if (added.Profile_URL__c == cw.candidateRec.Profile_URL__c) {
+                        alreadyAdded = true;
+                        break;
+                    }
+                }
+                if (!alreadyAdded) {
+                    limitedApiCandidates.add(cw.candidateRec);
+                    taken++;
                 }
             }
         }
-        if (!toUpdate.isEmpty()) update toUpdate;
 
-        // 🔟 Prepare response
+        // 6️⃣ Update Job Post and Insert new candidates
+        update jobPost;
+        if (!limitedApiCandidates.isEmpty()) insert limitedApiCandidates;
+
+        // 7️⃣ Prepare response
         List<Candidate__c> finalList = [
             SELECT Id, Candidate_Name__c, Profile_URL__c, Experience__c,
-                   Skills__c, Location__c, Rank__c, Is_Top__c
+                   Skills__c, Location__c
             FROM Candidate__c
-            WHERE Job_Post__c = :jobPostId AND Is_Top__c = true
-            ORDER BY Rank__c ASC
+            WHERE Job_Post__c = :jobPostId
+            ORDER BY CreatedDate DESC
         ];
 
         FetchResponse resp = new FetchResponse();
-        resp.message = limitedApiCandidates.size() + ' best candidates fetched and ranked.';
+        resp.message = limitedApiCandidates.size() + ' candidates fetched successfully.';
         resp.candidates = finalList;
         return resp;
     }
